sandrolain.test-boss.0c3495e800e28aca10ee0fe22f4f0e829fe1c775
Running as unit: run-p2612051-i15192141.scope; invocation ID: fd1a29f7c8a14ee3bc542a470229a97e
    Blocking waiting for file lock on package cache
   Compiling proc-macro2 v1.0.81
   Compiling unicode-ident v1.0.12
   Compiling version_check v0.9.4
   Compiling libc v0.2.154
    Checking cfg-if v1.0.0
   Compiling autocfg v1.2.0
   Compiling typenum v1.17.0
   Compiling serde v1.0.200
   Compiling syn v1.0.109
   Compiling generic-array v0.14.7
   Compiling fnv v1.0.7
    Checking pin-project-lite v0.2.14
    Checking memchr v2.7.2
    Checking subtle v2.4.1
    Checking futures-core v0.3.30
    Checking itoa v1.0.11
   Compiling slab v0.4.9
   Compiling proc-macro2-diagnostics v0.10.1
   Compiling quote v1.0.36
    Checking getrandom v0.2.14
   Compiling time-core v0.1.2
    Checking futures-sink v0.3.30
   Compiling num-conv v0.1.0
    Checking rand_core v0.6.4
    Checking bytes v1.6.0
   Compiling time-macros v0.2.18
   Compiling syn v2.0.60
    Checking futures-io v0.3.30
    Checking pin-utils v0.1.0
   Compiling yansi v1.0.1
    Checking futures-channel v0.3.30
    Checking signal-hook-registry v1.4.2
    Checking socket2 v0.5.7
    Checking mio v0.8.11
    Checking num_cpus v1.16.0
    Checking equivalent v1.0.1
    Checking futures-task v0.3.30
    Checking hashbrown v0.14.5
   Compiling strsim v0.10.0
    Checking crypto-common v0.1.6
    Checking block-buffer v0.10.4
   Compiling ident_case v1.0.1
    Checking once_cell v1.19.0
    Checking digest v0.10.7
    Checking powerfmt v0.2.0
    Checking cpufeatures v0.2.12
   Compiling httparse v1.8.0
    Checking deranged v0.3.11
    Checking inout v0.1.3
    Checking spin v0.9.8
    Checking ppv-lite86 v0.2.17
    Checking cipher v0.4.4
    Checking tracing-core v0.1.32
    Checking rand_chacha v0.3.1
    Checking log v0.4.21
   Compiling cc v1.0.96
    Checking time v0.3.36
    Checking percent-encoding v2.3.1
    Checking tinyvec_macros v0.1.1
    Checking tinyvec v1.6.0
    Checking rand v0.8.5
    Checking tracing v0.1.40
   Compiling num-traits v0.2.18
   Compiling ref-cast v1.0.22
   Compiling ring v0.17.8
    Checking smallvec v1.13.2
    Checking http v0.2.12
    Checking unicode-normalization v0.1.23
    Checking universal-hash v0.5.1
   Compiling lock_api v0.4.12
   Compiling serde_json v1.0.117
    Checking unicode-bidi v0.3.15
   Compiling bitflags v2.5.0
    Checking opaque-debug v0.3.1
   Compiling parking_lot_core v0.9.10
    Checking base64 v0.22.1
    Checking polyval v0.6.2
   Compiling devise_core v0.4.1
   Compiling futures-util v0.3.30
    Checking hmac v0.12.1
    Checking is-terminal v0.4.12
   Compiling cookie v0.18.1
   Compiling uncased v0.9.10
   Compiling serde_derive v1.0.200
   Compiling tokio-macros v2.2.0
   Compiling futures-macro v0.3.30
   Compiling pear_codegen v0.2.9
   Compiling ref-cast-impl v1.0.22
   Compiling async-trait v0.1.80
    Checking tokio v1.37.0
   Compiling try-lock v0.2.5
    Checking untrusted v0.9.0
    Checking scopeguard v1.2.0
    Checking ryu v1.0.17
   Compiling thiserror v1.0.59
   Compiling want v0.3.1
   Compiling thiserror-impl v1.0.59
   Compiling devise_codegen v0.4.1
   Compiling http-body v0.4.6
    Checking ghash v0.5.1
   Compiling darling_core v0.14.4
    Checking ctr v0.9.2
    Checking aes v0.8.4
    Checking sha2 v0.10.8
    Checking aead v0.5.2
    Checking inlinable_string v0.1.15
    Checking tokio-util v0.7.10
   Compiling semver-parser v0.7.0
    Checking either v1.11.0
    Checking winnow v0.6.7
   Compiling tower-service v0.3.2
   Compiling rustix v0.38.34
   Compiling httpdate v1.0.3
   Compiling pear v0.2.9
   Compiling hyper v0.14.28
   Compiling indexmap v2.2.6
   Compiling stable-pattern v0.1.0
   Compiling futures v0.3.30
   Compiling darling_macro v0.14.4
    Checking serde_spanned v0.6.5
    Checking uuid v1.8.0
    Checking toml_datetime v0.6.5
   Compiling semver v0.9.0
    Checking aes-gcm v0.10.3
    Checking h2 v0.3.26
    Checking parking_lot v0.12.2
    Checking toml_edit v0.22.12
   Compiling devise v0.4.1
    Checking hkdf v0.12.4
   Compiling darling_core v0.13.4
    Checking idna v0.5.0
    Checking form_urlencoded v1.2.1
    Checking aho-corasick v1.1.3
   Compiling figment v0.10.18
   Compiling multer v2.1.0
    Checking linux-raw-sys v0.4.13
   Compiling state v0.6.0
   Compiling radium v0.7.0
    Checking regex-syntax v0.8.3
   Compiling rocket_http v0.5.0
    Checking toml v0.8.12
    Checking url v2.5.0
   Compiling darling_macro v0.13.4
   Compiling rustc_version v0.2.3
    Checking regex-automata v0.4.6
   Compiling darling v0.14.4
   Compiling async-stream-impl v0.3.5
   Compiling unicase v2.7.0
   Compiling ahash v0.8.11
   Compiling rocket v0.5.0
    Checking encoding_rs v0.8.34
   Compiling unicode-xid v0.2.4
   Compiling glob v0.3.1
    Checking matches v0.1.10
    Checking lazy_static v1.4.0
   Compiling rustls v0.21.12
    Checking match_cfg v0.1.0
    Checking mime v0.3.17
    Checking tap v1.0.1
   Compiling heck v0.4.1
    Checking fastrand v2.1.0
   Compiling enum-as-inner v0.4.0
    Checking tempfile v3.10.1
    Checking wyz v0.5.1
    Checking hostname v0.3.1
   Compiling rocket_codegen v0.5.0
    Checking idna v0.2.3
    Checking async-stream v0.3.5
   Compiling rustc_version_runtime v0.2.1
   Compiling derive_builder_core v0.12.0
   Compiling darling v0.13.4
    Checking regex v1.10.4
    Checking ubyte v0.10.4
    Checking tokio-stream v0.1.15
    Checking rustls-webpki v0.101.7
    Checking sct v0.7.1
    Checking num-integer v0.1.46
   Compiling diesel_table_macro_syntax v0.1.0
    Checking quick-error v1.2.3
    Checking data-encoding v2.6.0
    Checking binascii v0.1.4
    Checking funty v2.0.0
    Checking zerocopy v0.7.32
    Checking ipnet v2.9.0
    Checking base64 v0.21.7
    Checking atomic v0.5.3
    Checking linked-hash-map v0.5.6
    Checking iana-time-zone v0.1.60
    Checking bit-vec v0.6.3
    Checking chrono v0.4.38
    Checking bitvec v1.0.1
    Checking lru-cache v0.1.2
    Checking bit-set v0.5.3
    Checking trust-dns-proto v0.21.2
    Checking num-bigint v0.4.5
    Checking resolv-conf v0.7.0
   Compiling derive_builder_macro v0.12.0
   Compiling diesel_derives v2.1.4
   Compiling serde_with_macros v1.5.2
    Checking serde_bytes v0.11.14
    Checking byteorder v1.5.0
    Checking finl_unicode v1.2.0
   Compiling convert_case v0.4.0
    Checking hex v0.4.3
    Checking base64 v0.13.1
    Checking stringprep v0.1.4
    Checking tokio-rustls v0.24.1
   Compiling derive_more v0.99.17
    Checking blowfish v0.9.1
    Checking bson v2.10.0
    Checking serde_with v1.14.0
    Checking unicase_serde v0.1.0
    Checking trust-dns-resolver v0.21.2
    Checking simple_asn1 v0.6.2
    Checking derive_builder v0.12.0
    Checking fancy-regex v0.11.0
    Checking rustls-pemfile v1.0.4
   Compiling rocket_db_pools_codegen v0.1.0
    Checking itertools v0.10.5
    Checking futures-executor v0.3.30
   Compiling derivative v2.2.0
   Compiling typed-builder v0.10.0
    Checking pem v3.0.4
    Checking pbkdf2 v0.11.0
    Checking sha-1 v0.10.1
    Checking md-5 v0.10.6
    Checking scoped-futures v0.1.3
    Checking socket2 v0.4.10
    Checking take_mut v0.2.2
    Checking quick-error v2.0.1
    Checking zeroize v1.7.0
    Checking bitflags v1.3.2
    Checking webpki-roots v0.25.4
    Checking bcrypt v0.15.1
    Checking zxcvbn v2.2.2
    Checking jsonwebtoken v9.3.0
    Checking email_address v0.2.4
    Checking diesel v2.1.6
    Checking dotenv v0.15.0
    Checking mongodb v2.8.2
    Checking rocket_db_pools v0.1.0
    Checking rocket_cors v0.6.0
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.1.6/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
